--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="myContainer">
                         <!-- <h3>Skills:</h3> -->
                          <h2>My Projects:</h2>
-                        <input class="myButton" type="submit" value="Go To Projects">
+                        <input class="myButton" type="button" value="Go To Projects" id="goToProjectsBtn">
                         
                     </div>
                 </section>
