added hosted link to projects.html file

--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 
         <section>
             <div>
-                <a href="/home/abdullah-muaz/Desktop/web-dev-learning/todos-Project/gpt-based-index.html" target="_blank">To-Do List</a>
+                <a href="https://abdullah123-commits.github.io/todos-project/" target="_blank">To-Do List</a>
             </div>
         </section>
     </body>
