add summer things/learnings

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
 
         <title>My Projects</title>
         <!-- LINK TO CSS FILE -->
+         <link rel="stylesheet" type="text/css" href="css/style-projects.css">
         <!-- IN FUTURE MAY BE  -->
     </head>
 <!-- ==============================START OF BODY ================================ -->
@@ -18,7 +19,7 @@
         </div>
 
         <section>
-            <div>
+            <div class="showcaseProject">
                 <a href="https://abdullah123-commits.github.io/todos-project/" target="_blank">To-Do List</a>
             </div>
         </section>
