--- a/index.html
+++ b/index.html
@@ -85,11 +85,15 @@
                     <div id="myContainer">
                         <h2>Technologies and Topics Explored:</h2>
                         <ul id="everyFirstSummerThingList" class="list">
-                            <li class="list-item">On 17 July'26 => I completed a rest API and template engine.</li>
-                            <li class="list-item">On 16 July'26 => I used curl to test and debug my <abbr title="Application Programming Interface">API</abbr></li>
-                            <li class="list-item">On 15 July'26 => I learned about NOSQL database namely <b>'MongoDB'</b>.</li>
-                            <li class="list-item">On 15 July'26 => I made a server using JavaScript runtime called <b>'node.js'</b></li>
-                            <li class="list-item">On 18 July'26 => I learned about a database called <b>'SQL'</b></li>
+                            <li class="list-item">On 17 July'25 => I completed a rest API and template engine.</li>
+                            <li class="list-item">On 16 July'25 => I used curl to test and debug my <abbr title="Application Programming Interface">API</abbr></li>
+                            <li class="list-item">On 15 July'25 => I learned about NOSQL database namely <b>'MongoDB'</b>.</li>
+                            <li class="list-item">On 15 July'25 => I made a server using JavaScript runtime called <b>'node.js'</b></li>
+                            <li class="list-item">On 18 July'25 => I learned about a database called <b>'SQL'</b></li>
+                            <li class="list-item">On 24 July'25 => I learned about <b>PHP</b>Cookies and Sessions.</li>
+                            <li class="list-item">On 22 July'25 => I made a mini <b>PHP</b> project regarding mails.</li>
+                            <li class="list-item">On 22 July'25 => I started learning about <b>Computer Architecture</b> and <b>Assembly</b> language.</li>
+
                         </ul>
                     </div>
                 </section>
