--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <div id="topDiv">
                 
-                <h1>My Portfolio</h1>
+                <h1>Abdullah Muaz's Portfolio</h1>
 
             </div>
 
